Add page content

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Cienka Linia</title>
+		<title>Wiosna już jest</title>
 		<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 		<link href="style.scss" type="text/scss" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -23,7 +23,7 @@
 		<!-- Jumbotron -->
 		<section class="hero">	
 			<div class="slogan">
-				<h1>Less is more, what is minimalism?<h1>
+				<h1>Nagłowek do commita<h1>
 			</div>
 		</section>
 		<!-- Benefits -->
