--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Jumbotron -->
 		<section class="hero">	
 			<div class="slogan">
-				<h1>Nagłowek do commita<h1>
+				<h1>Ponowna zmiana do commita<h1>
 			</div>
 		</section>
 		<!-- Benefits -->
@@ -31,8 +31,8 @@
 			<div class="row icons">
 				<div class="col-4 col-m-4 col-s-12">
 					<i class="fas fa-globe"></i>
-					<h2>RESEARCH</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur est sapien, sed ullamcorper justo porttitor consequat. Cras eu lectus lorem. Aenean eleifend quam ut dui consectetur faucibus. Aenean iaculis ac ante vitae cursus. Donec in neque lorem. Donec sed tellus magna. Nunc vel diam eget orci auctor pretium nec at nunc<p>
+					<h2>Trzecia zmiana zmiana</h2>
+					<p>Donec in neque lorem. Donec sed tellus magna. Nunc vel diam eget orci auctor pretium nec at nunc<p>
 				</div>
 				<div class="col-4 col-m-4 col-s-12">
 					<i class="fas fa-laptop"></i>
