--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Jumbotron -->
 		<section class="hero">	
 			<div class="slogan">
-				<h1>Ponowna zmiana do commita<h1>
+				<h1>Zmiana do zadania<h1>
 			</div>
 		</section>
 		<!-- Benefits -->
@@ -31,18 +31,18 @@
 			<div class="row icons">
 				<div class="col-4 col-m-4 col-s-12">
 					<i class="fas fa-globe"></i>
-					<h2>Trzecia zmiana zmiana</h2>
+					<h2>Zmiana do zadania </h2>
 					<p>Donec in neque lorem. Donec sed tellus magna. Nunc vel diam eget orci auctor pretium nec at nunc<p>
 				</div>
 				<div class="col-4 col-m-4 col-s-12">
 					<i class="fas fa-laptop"></i>
 					<h2>TECHNOLOGY</h2>
-					<p> Curabitur aliquet elit sit amet lorem tristique egestas. Nullam hendrerit ipsum vitae dolor feugiat posuere. Donec finibus arcu quis elit viverra, at lobortis nibh maximus. Mauris lacinia pretium justo vitae rhoncus. Vestibulum hendrerit vehicula ornare. Aliquam pellentesque ultricies risus non blandit. </p>
+					<p> Curabitur aliquet elit sit amet lorem tristique egestas. Nullam hendrerit ipsum vitae dolor feugiat posuere.</p>
 				</div>
 				<div class="col-4 col-m-4 col-s-12">
 					<i class="fas fa-cogs"></i>
 					<h2>WORK AND WORK</h2>
-					<p>Mauris mauris ligula, efficitur eleifend massa eget, laoreet mollis diam. Vestibulum non nulla id metus consectetur ultricies.Aenean a accumsan lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum vel leo a elit convallis fermentum in blandit ante.</p>
+					<p>Mauris mauris ligula, efficitur eleifend massa eget, laoreet mollis diam. Vestibulum non nulla id metus consectetur ultricies.</p>
 				</div>
 			</div>
 		</section>	
