--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 					<i class="fas fa-cogs"></i>
 					<h2>WORK AND WORK</h2>
 					<p>Mauris mauris ligula, efficitur eleifend massa eget, laoreet mollis diam. Vestibulum non nulla id metus consectetur ultricies.</p>
+					<h3>Dodany trzeci nagłówek</h3>
 				</div>
 			</div>
 		</section>	
