--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 					<h2>WORK AND WORK</h2>
 					<p>Mauris mauris ligula, efficitur eleifend massa eget, laoreet mollis diam. Vestibulum non nulla id metus consectetur ultricies.</p>
 					<h3>Dodany trzeci nagłówek</h3>
+					<img src="https://images.unsplash.com/photo-1489769002049-ccd828976a6c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=df87546bf05fef76cc185276ad0d884c&auto=format&fit=crop&w=1214&q=80" alt="biuro">
 				</div>
 			</div>
 		</section>	
